--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: 王林的个人主页
+title: 中国科学院大气物理研究所王林
 subtitle: ''
 description: ''
 keywords:
