--- a/themes/icarus/_config.yml
+++ b/themes/icarus/_config.yml
@@ -79,6 +79,7 @@ navbar:
         # Tags: /tags
         # About: /about
         主页: /
+        新闻动态: /news
         学术论文: /publications
         国际会议报告: /conferences
         课题组: /group
@@ -222,6 +223,7 @@ widgets:
         # Names and URLs of the sites
         links:
             最新动态: '/cn'
+            新闻动态: '/cn/news'
             学术论文: '/cn/publications'
             国际会议报告: '/cn/conferences'
             课题组: '/cn/group'
