--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,8 @@ jobs:
       run: |
         npm install
         npm install -g hexo
-        hexo generate
+    - name: Build Hexo Resources
+      run: hexo generate
 
     # Deploy hexo blog website.
     - name: Deploy
